# open_music

./: Cargo.toml  README.md
src/: command.rs  config.rs  context.rs  library.rs  main.rs  player.rs  plugin.rs  ui.rs
src/command/: executor.rs
