[package]
name = "open_music"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio decoding
symphonia = { version = "0.6", features = ["mp3", "aac", "flac", "vorbis", "wav", "isomp4"] }

# Audio output
rodio = "0.20"

# Encoding
base64 = "0.22"

# Image (cover art)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
dirs = "6"

# TUI
crossterm = "0.28"
ratatui = "0.29"

# File watching (config hot-reload)
notify = "8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
